:hammer: Add footer | detail section | complete Homepage

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "Barazman",
-  "version": "0.0.0",
+  "name": "barazman",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "vite",
