--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -23,7 +23,7 @@ jobs:
         with:
           version: 7
           run_install: |
-            - recursive: true
+            - recursive: false
               args: [--frozen-lockfile, --strict-peer-dependencies]
 
       - name: Build project
