--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -5,7 +5,10 @@ on:
   push:
     branches:
       - main
-
+permissions:
+  contents: write
+  pull-requests: write
+  
 jobs:
   build:
     name: Build
