--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -32,6 +32,9 @@ jobs:
       - name: Build project
         run: pnpm run build
 
+      - name: List Directory
+        run: ls
+        
       - name: Upload production-ready build files
         uses: actions/upload-artifact@v3
         with:
@@ -50,7 +53,8 @@ jobs:
         with:
           name: production-files
           path: ./dist
-
+      - name: List Directory
+        run: ls
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
